compiler/kernc_cli/tests/soundness/reject/mutability/immutable_trait_object_cannot_use_mut_pointer_impl.rn
// Constructing an immutable trait object from a mutable concrete pointer must
// not use a trait impl whose receiver is `*mut Concrete`; the proof receiver
// for `*Trait` is the shared pointer view.
// stderr: the provided pointer type does not implement the target trait

type Base = trait {
    set: fn(i32) void,
    get: fn() i32,
};

type Cell = struct {
    value: i32,
};

impl *mut Cell : Base {
    pub fn set(value: i32) void {
        self.value = value;
    }

    pub fn get() i32 {
        return self.value;
    }
}

fn main() i32 {
    let mut cell = Cell.{ value: 1 };
    let obj = *Base.{ cell..& };
    obj.set(42);
    return cell.value;
}
